# leaves-ph

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HARDENING_PLAN.md  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug.md  lgu_correction.md
.github/workflows/: ci.yml
animation/: _basemap.py  _zoomed.py  generate_known_vs_predicted.py  generate_la_mesa_watershed.py  generate_metro_manila_timeline.py  generate_per_lgu_choropleth.py  generate_quirino_avenue.py  generate_remaining_canopy.py  generate_salex_corridor.py
data/: calibration_report.json
data/canopy_model/: RESULTS.md  canopy_clf.joblib  canopy_clf_meta.json  cell_pop.json  clip_feature_result.json  learning_curve.json  master_labels.csv  master_metadata.csv  model_comparison.json  ncr_series_model_vs_ndvi.csv  rich_feature_result.json
data/composites/: _canopy_manifest.json  _fetch_manifest_dw.json  _fetch_manifest_s2.json  _fetch_manifest_s2_rgb.json
data/esa/: _fetch_manifest_esa.json
data/hansen/: _fetch_manifest_hansen.json
data/lgu/: _fetch_manifest_lgu.json  ncr_lgu.geojson
data/meta/: _fetch_manifest_meta.json
data/per_barangay/: per_barangay_canopy_2019_2026.csv  per_barangay_canopy_2019_2026_model.csv
data/per_lgu/: _aggregate_manifest.json  per_lgu_canopy_2019_2026.csv
detection/bootstrap/: fetch_osm_tree_labels.py
detection/buildings/: fetch_tiles.py
detection/scan/: multi_year_scan.py  ncr_scan.py  scan_cebu.py
detection/train/: build_dataset_v2.py  build_dataset_v3.py  build_dataset_v4.py  build_dataset_v6_regression.py  clf_v9_metrics.json  clf_v9_metrics_honest.json  train_v2.py  train_v3.py  train_v4.py  train_v5_platt.py  train_v6_regressor.py
docs/: methodology.md  privacy-impact-assessment.md  setup-gee.md
docs/demo/: linkedin-post.md
docs/launch/: facebook-post.md  (+2 more)
leaves_ph/: __init__.py  api.py
pipeline/: README.md  __init__.py  _gee_init.py  aggregate_barangay_model.py  aggregate_lgu.py  calibrate_ndvi_threshold.py  compute_canopy.py  compute_canopy_model.py  csv_to_geojson.py  extract_tree_crowns.py  fetch_barangay_polygons.py  fetch_cebu_proof.py  fetch_dynamic_world.py  fetch_esa_worldcover.py  fetch_hansen.py  fetch_lgu_polygons.py  fetch_meta_canopy_height.py  fetch_sentinel2_rgb.py  fetch_sentinel2_yearly.py  generate_meta_tiles.py  tag_tree_crowns_status.py
scripts/: finalize_v6_series.py  publish_to_huggingface.py  verify_release.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  vercel.json
tests/: test_lgu_list.py  test_smoke.py
(+30 files in other folders)
